fix: broken CSS file

--- a/packages/api-client/src/assets/css/variables.css
+++ b/packages/api-client/src/assets/css/variables.css
@@ -3,7 +3,7 @@
   --scalar-api-client-background-primary: #fff;
   --scalar-api-client-background-secondary: #f1f3f5;
   --scalar-api-client-background-input: #fff;
-  --scalar-api-client-background-muted: #f8f9fa
+  --scalar-api-client-background-muted: #f8f9fa;
   --scalar-api-client-border-color: #dee2e6;
   --scalar-api-client-fill-icon: #212529;
 
